# co-design-FE

./: .env.example  404.html  BUILD_ID  README.md  asset-manifest.json  basic-resources.html  build-manifest.json  case-studies-and-core-tools.html  generate-output-json.js  index.html  next-seo.config.ts  next-server.js.nft.json  next.config.js  next.config.mjs  package-lock.json  package.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  tailwind.config.ts  tools-resources.html  trace  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml  deployment.yml  nextjs.yml
datalayer/: README.md  datalayer.py  pyproject.toml
public/: Untitled-1.json  data.csv  data.json  output.json  zotero_data.json
server/: middleware-build-manifest.js  pages-manifest.json  webpack-runtime.js
server/chunks/: 348.js  859.js  954.js
server/pages/: 404.html  500.html  _app.js  _app.js.nft.json  _document.js  _document.js.nft.json  _error.js  _error.js.nft.json  basic-resources.html  basic-resources.js.nft.json  case-studies-and-core-tools.html  index.html  index.js.nft.json  tools-resources.html
src/: App.js
src/app/: layout.tsx  page.tsx
src/components/: Block.tsx  Canvas.tsx  Card.tsx  CoreToolkit.jsx  CoreToolkit.tsx  Data.jsx  Data.tsx  Footer.tsx  Group.tsx  GroupedData.jsx  GroupedData.tsx  GroupedTools.jsx  GroupedTools.tsx  Header.tsx  HightlightCaseStudyDetails.tsx  NodeCard.tsx  ResourcesCard.tsx
src/constants/: index.ts
src/contex/: index.tsx
src/context/: app.tsx  filter.tsx  (+3 more)
(+195 files in other folders)
